[package]
name = "dawnup"
version = "0.1.0"
authors = ["Mario Finelli <mario@finel.li>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
